WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278475
Web Inspector: JavaScriptCore - error: member access into incomplete type 'Inspector::RemoteConnectionToTarget'
https://bugs.webkit.org/show_bug.cgi?id=278475
Summary
Web Inspector: JavaScriptCore - error: member access into incomplete type 'In...
Qianlang Chen
Reported
2024-08-21 11:46:26 PDT
C++20 and C++23 make implicit destructors constexpr when possible, and compiler changes make this happen in more cases. This causes a few objects to be instantiated more eagerly which is causing template instantiation failures. We likely need to avoid forward-declaring some types in this case, or explicitly define the destructors out-of-line to avoid the implicit destructor being instantiated too early. LLVM PR which contains some discussion on the C++ standard changes that cause this failure:
https://github.com/llvm/llvm-project/pull/77753
rdar://134288008
Attachments
Add attachment
proposed patch, testcase, etc.
Qianlang Chen
Comment 1
2024-08-21 11:49:16 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32539
EWS
Comment 2
2024-08-23 09:59:12 PDT
Committed
282663@main
(7e42319448fe): <
https://commits.webkit.org/282663@main
> Reviewed commits have been landed. Closing PR #32539 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug