Web Inspector: JavaScriptCore - error: member access into incomplete type 'Inspector::RemoteConnectionToTarget' https://bugs.webkit.org/show_bug.cgi?id=278475 rdar://134288008

Reviewed by BJ Burg.

* Source/JavaScriptCore/inspector/remote/RemoteInspector.h:
   - Avoid forward declaring RemoteConnectionToTarget.

* Source/JavaScriptCore/CMakeLists.txt:
* Source/JavaScriptCore/JavaScriptCore.xcodeproj/project.pbxproj:
   - Ensure the RemoteConnectionToTarget header is visible from
     WebKitLegacy since WebView.mm includes RemoteInspector.h, which
     with this patch now includes RemoteConnectionToTarget.h.

Canonical link: https://commits.webkit.org/282663@main